ID-880 Sam User Attributes (#1219)
* SamUserAttributes endpoint

* SamUserRegistration endpoint

* Tests and such

* api docs
